--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UsabilityHub</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="media-queries.css">
 </head>
 <body>
 
@@ -22,7 +23,7 @@
       <a href="#" class="company-logo">
           <img src="asset/asset 1.png" alt="usability hub">
       </a>
-      <div class="nav-links">
+      <div class="nav-links active" id="nav-links">
         <ul class="flex">
           <li><a href="#" class="hover-link">Products</a></li>
           <li><a href="#" class="hover-link">Customer</a></li>
@@ -32,6 +33,7 @@
           <li><a href="#" class="hover-link primary-button">Sign up</a></li>
         </ul>
       </div>
+      <a href="#" class="nav-toggle hover-link" id="nav-toggle"><i class="fa-solid fa-bars"></i></a>
     </div>
   </nav>
 
@@ -137,7 +139,7 @@
   </section>
 
   <section class="big-features-section">
-    <div class="container flex big-feature-container" style="flex-direction:row-reverse">
+    <div class="container flex big-feature-container" id="second-big-feature">
       <div class="feature-img">
         <img src="asset/asset 21.png" alt="">
       </div>
@@ -203,6 +205,7 @@
     </div>
   </section>
 
+  <!-- footer section -->
   <footer>
     <div class="container flex footer-container">
       <a href="#" class="company-logo">
@@ -255,5 +258,14 @@
   </div>
 
   <script src="https://kit.fontawesome.com/fd7574e122.js" crossorigin="anonymous"></script>
+
+  <script>
+    const toggleButton = document.getElementById('nav-toggle');
+    const navLinks = document.getElementById('nav-links');
+
+    toggleButton.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
+    })
+  </script>
 </body>
 </html>
