--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="#" class="company-logo">
           <img src="asset/asset 1.png" alt="usability hub">
       </a>
-      <div class="nav-links active" id="nav-links">
+      <div class="nav-links" id="nav-links">
         <ul class="flex">
           <li><a href="#" class="hover-link">Products</a></li>
           <li><a href="#" class="hover-link">Customer</a></li>
